--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Acme AI | 인공지능으로 비즈니스를 가속하다</title>
-  <meta name="description" content="Acme AI – 예측 분석, 생성형 AI, 자동화로 비즈니스를 가속하는 라이트 톤 기업 웹사이트 템플릿" />
+  <title>saico | 인공지능으로 비즈니스를 가속하다</title>
+  <meta name="description" content="saico – 예측 분석, 생성형 AI, 자동화로 비즈니스를 가속하다다" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -135,8 +135,8 @@
       <div class="hero-grid">
         <div>
           <span class="eyebrow">생성형 AI · 예측 분석 · 자동화</span>
-          <h1>인공지능으로 비즈니스를 <br/>측정 가능하게 성장시키다</h1>
-          <p class="lead">Acme AI는 데이터 수집부터 모델 운영(MLOps)까지 엔드투엔드 플랫폼을 제공합니다. 몇 주가 걸리던 PoC를 며칠로 단축하고, 운영 효율을 극대화하세요.</p>
+          <h1>인공지능으로 모든 데이터를 <br/>측정 가능하게 성장시키다</h1>
+          <p class="lead">saico는 데이터 수집부터 모델 운영(MLOps)까지 엔드투엔드 플랫폼을 제공합니다. 몇 주가 걸리던 PoC를 며칠로 단축하고, 운영 효율을 극대화하세요.</p>
           <div class="hero-cta">
             <a class="btn btn-primary" href="#contact">데모 요청</a>
             <a class="btn btn-ghost" href="#features">핵심 기술</a>
@@ -160,9 +160,6 @@
             </svg>
           </div>
           <div class="badges">
-            <span class="badge">최대 10x 더 빠른 PoC</span>
-            <span class="badge">엔터프라이즈 보안</span>
-            <span class="badge">한국어 최적화</span>
           </div>
         </div>
       </div>
