--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
   <header>
     <div class="container nav">
       <a class="brand" href="#top" aria-label="Acme AI home">
-        <span class="logo">AI</span>
-        <span>Acme AI</span>
+        <img class="logo-img" src="assets/logo.svg" alt="회사 로고" width="36" height="36" />
+        <span>saico</span>
       </a>
       <nav class="nav-links" aria-label="Primary">
         <a href="#about">회사소개</a>
